--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NPM Boilerplate",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack webpack.config.js",
+    "build": "webpack webpack.config.js",
     "install": "npm run build",
     "postinstall": "npm run build"
   },
