--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "bugs": {
     "url": "https://github.com//issues"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^5.8.30",
     "babel-loader": "^5.3.2",
     "webpack": "^1.12.2"
-  }
+  },
+  "devDependencies": {}
 }
