--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NPM Boilerplate",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "webpack webpack.config.js",
+    "build": "node_modules/.bin/webpack webpack.config.js",
     "install": "npm run build",
     "preinstall": "npm run build"
   },
@@ -21,10 +21,10 @@
   "bugs": {
     "url": "https://github.com//issues"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "babel-core": "^5.8.30",
     "babel-loader": "^5.3.2",
     "webpack": "^1.12.2"
-  },
-  "devDependencies": {}
+  }
 }
