--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "dgx-npm-boilerplate",
   "version": "0.0.1",
   "description": "NPM Boilerplate",
-  "main": "./dist/index.js",
+  "main": "./dist/index.min.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack webpack.config.js"
+    "build": "node_modules/.bin/webpack --config webpack.config.js"
   },
   "author": "Edwin Guzman <edwinguzman@nypl.org>",
   "license": "MIT",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-core": "^5.8.30",
     "babel-loader": "^5.3.2",
+    "clean-webpack-plugin": "^0.1.3",
     "webpack": "^1.12.2"
   }
 }
